# speech-command-recognition

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  test.py
notebooks/: main.ipynb
src/: uncompress.py
