[tool.poetry]
name = "speech-command-recognition"
version = "0.1.0"
description = ""
authors = ["pirocheto <pirocheto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.1.4"
dvc = "^3.33.3"
pydub = "^0.25.1"
seaborn = "^0.13.0"
librosa = "^0.10.1"
tensorflow-macos = "^2.15.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
